[tool.poetry]
name = "docker-devpi"
version = "0"
description = "manages dependency versions"
authors = ["Thomas Frössman <thomasf@jossystem.se>"]

[tool.poetry.dependencies]
# core
python = "^3.7"
devpi-server = "*"
devpi-web = "*"
devpi-client = "*"
# plugins
devpi-constrained = {version = "*", optional = true}
devpi-findlinks = {version = "*", optional = true}
devpi-jenkins = {version = "*", optional = true}
devpi-ldap = {version = "*", optional = true}
devpi-lockdown = {version = "*", optional = true}
devpi-postgresql = {version = "*", optional = true}
devpi-pr = {version = "*", optional = true}


[tool.poetry.extras]
plugins = [
        "devpi-constrained",
        "devpi-findlinks", 
        "devpi-jenkins", 
        "devpi-ldap", 
        "devpi-lockdown", 
        "devpi-postgresql", 
        "devpi-pr", 
        ]